--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "minecraft-server-util": "^5.4.4",
     "node-mcstatus": "^1.1.0"
   }
 }
